objects/CalendlyAction__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CalendlyActions</relationshipLabel>
        <relationshipName>CalendlyActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomQuestion1__c</fullName>
        <label>CustomQuestion1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomQuestion2__c</fullName>
        <label>CustomQuestion2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomQuestion3__c</fullName>
        <label>CustomQuestion3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomResponse1__c</fullName>
        <label>CustomResponse1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomResponse2__c</fullName>
        <label>CustomResponse2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomResponse3__c</fullName>
        <label>CustomResponse3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventCancelReason__c</fullName>
        <label>Event Cancel Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventCanceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventCancelerName__c</fullName>
        <label>Event Canceler Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventCreatedAt__c</fullName>
        <label>Event Created At</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventDescription__c</fullName>
        <label>Event Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventEndTime__c</fullName>
        <label>Event End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventPrimaryPublisherEmail__c</fullName>
        <label>Event Primary Publisher Email</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventPrimaryPublisherName__c</fullName>
        <label>Event Primary Publisher Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventStartTime__c</fullName>
        <label>Event Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventSubject__c</fullName>
        <label>Event Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventTypeDuration__c</fullName>
        <label>Event Type Duration</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventTypeKind__c</fullName>
        <label>Event Type Kind</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventTypeName__c</fullName>
        <label>Event Type Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventTypeSlug__c</fullName>
        <label>Event Type Slug</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventUuid__c</fullName>
        <label>Event Uuid</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InviteeCancelReason__c</fullName>
        <label>Invitee Cancel Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InviteeCanceledAt__c</fullName>
        <label>Invitee Canceled At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InviteeCanceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invitee Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InviteeCancelerName__c</fullName>
        <label>Invitee Canceler Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InviteeCreatedAt__c</fullName>
        <label>Invitee Created At</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InviteeEmail__c</fullName>
        <label>Invitee Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>InviteeFirstName__c</fullName>
        <label>Invitee First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InviteeLastName__c</fullName>
        <label>Invitee Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InviteeName__c</fullName>
        <label>Invitee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InviteeTimezone__c</fullName>
        <label>Invitee Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InviteeUuid__c</fullName>
        <label>Invitee Uuid</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectId__c</fullName>
        <label>Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UtmCampaign__c</fullName>
        <label>UtmCampaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UtmContent__c</fullName>
        <label>UtmContent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UtmMedium__c</fullName>
        <label>UtmMedium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UtmSource__c</fullName>
        <label>UtmSource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UtmTerm__c</fullName>
        <label>UtmTerm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CalendlyAction</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>EventPrimaryPublisherEmail__c</columns>
        <columns>EventPrimaryPublisherName__c</columns>
        <columns>EventStartTime__c</columns>
        <columns>EventEndTime__c</columns>
        <columns>Client__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>InviteeName__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CalendlyAction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CalendlyActions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>